fixed issue adding div containers to html pages.

--- a/dispenser.html
+++ b/dispenser.html
@@ -18,8 +18,11 @@
           $("#nav-placeholder").replaceWith(data);
       });
   </script> 
-
-  <h1>Nuestro Dispensador.</h1>
+    
+    <div class="container">
+        <h1>Nuestro Dispensador.</h1>   
+    </div>
+  
 
 
 </body>
