--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     </div>
 
     <script>
-      $.get("navigation.html", function(data){
-          $("#nav-placeholder").replaceWith(data);
-      });
-  </script> 
+    $.get("navigation.html", function(data){
+        $("#nav-placeholder").replaceWith(data);
+    });
+    </script> 
 
-
+    <div class="container">
+        <h1 style="align-self: center;">Eslogan o frase de bienvenida.</h1>
+    </div>
 </body>
 </html>
