--- a/process.html
+++ b/process.html
@@ -18,8 +18,10 @@
           $("#nav-placeholder").replaceWith(data);
       });
   </script> 
-
-  <h1>Descubre el proceso.</h1>
+    
+    <div class="container">
+        <h1>El proceso.</h1>   
+    </div>
 
 </body>
 </html>
