--- a/purification.html
+++ b/purification.html
@@ -19,7 +19,9 @@
       });
   </script> 
 
-  <h1>¿Cómo es la purificación?</h1>
+    <div class="container">
+        <h1>¿Cómo es la purificación?</h1>   
+    </div>
 
 </body>
 </html>
