added example text

--- a/dispenser.html
+++ b/dispenser.html
@@ -20,7 +20,9 @@
   </script> 
     
     <div class="container">
-        <h1>Nuestro Dispensador.</h1>   
+        <h1>Nuestro Dispensador.</h1>  
+        <p>Junto a nuestro equipo hemos desarrollado un diseño de un purificador y dispensador de agua, descubre aquí nuestro diseño.</p> 
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, quae at ipsa eligendi quod dolorum esse placeat voluptates repudiandae illo officia eaque exercitationem rerum ut et provident, enim explicabo vitae!</p>
     </div>
   
 
