--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <div class="container">
         <h1 style="align-self: center;">Eslogan o frase de bienvenida.</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, quae at ipsa eligendi quod dolorum esse placeat voluptates repudiandae illo officia eaque exercitationem rerum ut et provident, enim explicabo vitae!</p>
     </div>
 </body>
 </html>
