--- a/process.html
+++ b/process.html
@@ -21,6 +21,8 @@
     
     <div class="container">
         <h1>El proceso.</h1>   
+        <p>Nuestro modelo se compone de dos procesos: Purificación y dispensación. Descubre cómo nuestro modelo realiza esos dos procesos.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, quae at ipsa eligendi quod dolorum esse placeat voluptates repudiandae illo officia eaque exercitationem rerum ut et provident, enim explicabo vitae!</p>
     </div>
 
 </body>
