--- a/purification.html
+++ b/purification.html
@@ -21,6 +21,8 @@
 
     <div class="container">
         <h1>¿Cómo es la purificación?</h1>   
+        <p>La purificación es un proceso para poder transformar el agua a potable, todo esto para el consumo humano y de disfrutar lo beneficios que nos da.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, quae at ipsa eligendi quod dolorum esse placeat voluptates repudiandae illo officia eaque exercitationem rerum ut et provident, enim explicabo vitae!</p>
     </div>
 
 </body>
