--- a/index.html
+++ b/index.html
@@ -34,60 +34,50 @@
             <div class="card-body">
               <h5 class="card-title">¡Echa un vistazo al diseño de nuestro dispensador!</h5>
               <p class="card-text">Como equipo, durante este semestre hemos estado realizando un modelo especial para poder proveer agua al público, puedes ver el modelo aquí.</p>
-              <a href="#" class="btn btn-primary">Ir al diseño</a>
+              <a href="dispenser.html" class="btn btn-primary">Ir al diseño</a>
             </div>
         </div>
         <br>
 
-        <h2>Conoce nuestro equipo</h2>
+        <h2>¿Cuál es nuestra problemática?</h2>
+        <img src="images/glass_of_water.jpg" class="rounded float-end" alt="glass of water">
+        <p>Hemos, como equipo, identificado ciertas problemáticas u objetivos según los <a href="https://www.un.org/sustainabledevelopment/es/" target="_blank">17 Objetivos de Desarrollo Sostenible de la ONU</a> donde se identificaron los siguientes de acuerdo a nuestro proyecto:
+        </p>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item"> <b>Salud y Bienestar</b>: En medio de la salud física, es necesario el consumo de agua natural diario, y es algo que las personas posiblemente no le tomen importancia. Por eso es necesario concientizar acerca de la importancia del consumo de agua y sus beneficios.</li>
+          <li class="list-group-item"> <b>Agua Limpia y Saneamiento</b>: El agua limpia para su consumo es importante, explotando sus mayores beneficios. El posicionamiento de estaciones o áreas donde se de agua limpia y lista para ser consumida para las personas es algo importante, sobre todo, en universidades o lugares públicos o concurridos.</li>
+          <li class="list-group-item"> <b>Industria, Innovación e Infraestructura</b>: Para las problemáticas anteriores se necesita el uso de ciertas tecnologías e innovaciones relacionadas con la industria para poder satisfacer las necesidades. Es por eso que es necesario el conocimiento y aplicación de estrategias relacionadas con esta área, para poder llevar a cabo proyectos que tengan cierta innovación, facilidad de emprendimiento y que sean efectivas.</li>
+          <li class="list-group-item"> <b>Producción y Consumo Responsables</b>: El proyecto tiene como propósito reducir el consumo de botellas de plástico, promoviendo la reutilización de envases.</li>
+        </ul>
+        <br>
 
-        <div id="carouselExampleCaptions" class="carousel slide">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="..." class="d-block w-100" alt="foto_gilberto">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="foto_dylan">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="foto_hugo">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
-                </div>
-              </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+        <h2>Nuestros objetivos</h2>
+        <div class="card">
+          <div class="card-body">
+            <h3>Objetivo General</h3>
+            <ul class="list-group">
+              <li class="list-group-item">El desarrollo de esta página web en la cual se da a conocer información sobre el futuro dispensador de agua, los planos y bases del mismo.</li>
+            </ul>
+            <br>
+
+            <h3>Objetivos Específicos</h3>
+            <ul class="list-group">
+              <li class="list-group-item">Organización y desarrollo de la página web utilizando conocimientos aprendidos durante las clases.</li>
+              <li class="list-group-item">Proveer un diseño amigable, atractivo y fácil de utilizar para el usuario.</li>
+              <li class="list-group-item">El desarrollo de un modelo útil y funcional del dispensador de agua.</li>
+            </ul>
           </div>
-    </div>
+        </div>
+        <br>
 
-    
+        <h2>El equipo</h2>
+        <ol class="list-group list-group-numbered">
+          <a href="#" class="list-group-item list-group-item-action">Gilberto Castillo Gámez - IGTI</a>
+          <a href="#" class="list-group-item list-group-item-action">Dylan Hernández Rojas - ISC</a>
+          <a href="#" class="list-group-item list-group-item-action">Juan José Rodríguez Contreras - IGTI</a>
+          <a href="#" class="list-group-item list-group-item-action">Hugo Roldán Gutiérrez - IIS</a>
+        </ol>
+        
+    </div>
 </body>
 </html>
