añadí nuevas partes del home, además de quitar algunos archivos (fotos) que ya no eran necesarios.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>   
 
 <body>
@@ -22,12 +22,12 @@
     });
     </script> 
 
-    <div class="container">
+    <div class="container" data-aos="fade-up">
         <h1 style="align-self: center;">Eslogan o frase de bienvenida.</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, quae at ipsa eligendi quod dolorum esse placeat voluptates repudiandae illo officia eaque exercitationem rerum ut et provident, enim explicabo vitae!</p>
 
 
-        <div class="card">
+        <div class="card" data-aos="fade-right" data-aos-duration="1000">
             <div class="card-header">
               Diseño del dispensador
             </div>
@@ -40,7 +40,7 @@
         <br>
 
         <h2>¿Cuál es nuestra problemática?</h2>
-        <img src="images/glass_of_water.jpg" class="rounded float-end" alt="glass of water">
+        <img src="images/glass_of_water.jpg" class="rounded float-end" alt="glass of water" data-aos="fade-left" data-aos-duration="1000">
         <p>Hemos, como equipo, identificado ciertas problemáticas u objetivos según los <a href="https://www.un.org/sustainabledevelopment/es/" target="_blank">17 Objetivos de Desarrollo Sostenible de la ONU</a> donde se identificaron los siguientes de acuerdo a nuestro proyecto:
         </p>
         <ul class="list-group list-group-flush">
@@ -52,7 +52,7 @@
         <br>
 
         <h2>Nuestros objetivos</h2>
-        <div class="card">
+        <div class="card" data-aos="fade-right" data-aos-duration="1000">
           <div class="card-body">
             <h3>Objetivo General</h3>
             <ul class="list-group">
@@ -71,13 +71,22 @@
         <br>
 
         <h2>El equipo</h2>
-        <ol class="list-group list-group-numbered">
+        <ol class="list-group list-group-numbered" data-aos="fade-down" data-aos-duration="1000">
           <a href="#" class="list-group-item list-group-item-action">Gilberto Castillo Gámez - IGTI</a>
           <a href="#" class="list-group-item list-group-item-action">Dylan Hernández Rojas - ISC</a>
           <a href="#" class="list-group-item list-group-item-action">Juan José Rodríguez Contreras - IGTI</a>
           <a href="#" class="list-group-item list-group-item-action">Hugo Roldán Gutiérrez - IIS</a>
         </ol>
-        
     </div>
+    <br>
+
+    <footer>
+      <a href="https://github.com/UltimateDystrom/PaginaWebDispensador" target="_blank"><img src="images/github-mark.png" alt="link to github project" width="60px"></a>
+    </footer>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
