--- a/purification.html
+++ b/purification.html
@@ -7,6 +7,15 @@
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style>
+		canvas{
+			background-color: #ffffff;
+			padding: 10px;
+			border-radius: 5px;
+			box-shadow: 2px 2px 5px rgba(208, 207, 207, 0.1);
+		}
+	</style>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
@@ -20,10 +29,37 @@
   </script> 
 
     <div class="container">
-        <h1>¿Cómo es la purificación?</h1>   
+        <h1>Justificacion</h1>   
         <p>La purificación es un proceso para poder transformar el agua a potable, todo esto para el consumo humano y de disfrutar lo beneficios que nos da.</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, quae at ipsa eligendi quod dolorum esse placeat voluptates repudiandae illo officia eaque exercitationem rerum ut et provident, enim explicabo vitae!</p>
     </div>
-
+    <canvas id="myChart"></canvas>
+	<script>
+		var ctx = document.getElementById('myChart').getContext('2d');
+		var chart = new Chart(ctx, {
+			type: 'doughnut',
+			data: {
+				labels: ['No compro envases de plásticos tengo mi propio envase', '2 a 4 veces por semana', 'Una vez por semana','    Todos los días' ],
+				datasets: [{
+					label: 'Respuestas',
+					data: [59.8, 12, 22.8, 5.4 ],
+                    
+					borderWidth: 1
+				}]
+			},
+			options: {
+                responsive: false,
+				scales: {
+                    width: 800,
+                    height: 600,
+					yAxes: [{
+						ticks: {
+							beginAtZero: true
+						}
+					}]
+				}
+			}
+		});
+	</script>
 </body>
 </html>
