página suscripción terminada

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                       Como equipo, durante este semestre hemos estado realizando un modelo especial para poder proveer agua al público, puedes ver el modelo aquí.
                     </p>
                     <div class="btn-box">
-                      <a href="service.html" class="btn-1">
+                      <a href="dispenser.html" class="btn-1">
                         Ir al diseño
                       </a>
                     </div>
@@ -267,7 +267,7 @@
       <p>
         Hosted with GitHub Pages
         <br>
-        © 2019 All Rights Reserved
+        © 2023 All Rights Reserved
       </p>
     </section>
     <!-- footer section -->
