--- a/subscription.html
+++ b/subscription.html
@@ -9,7 +9,7 @@
   <meta name="description" content=""/>
   <meta name="author" content=""/>
 
-  <title>BigWing</title>
+  <title>Suscripción</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css"/>
@@ -23,6 +23,8 @@
   <link href="css/style.css" rel="stylesheet"/>
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet"/>
+  <!-- AOS -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body class="sub_page">
@@ -35,7 +37,7 @@
             <nav class="navbar navbar-expand-lg custom_nav-container ">
               <a class="navbar-brand" href="index.html">
                 <span>
-                  BigWing
+                  JNV
                 </span>
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,24 +48,18 @@
                 <div class="d-flex  flex-column flex-lg-row align-items-center">
                   <ul class="navbar-nav  ">
                     <li class="nav-item active">
-                      <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="about.html">About </a>
+                      <a class="nav-link" href="subscription.html">Suscripción </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="service.html">Services </a>
+                      <a class="nav-link" href="dispenser.html">Dispensador </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#"> Login</a>
+                      <a class="nav-link" href="results.html">Encuesta</a>
                     </li>
                   </ul>
-                  <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                    <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-                  </form>
                 </div>
               </div>
             </nav>
@@ -77,7 +73,7 @@
   <!-- welcome section -->
   <section class="welcome_section layout_padding">
     <div class="container">
-      <div class="custom_heading-container">
+      <div class="custom_heading-container" data-aos="fade-right" data-aos-duration="3000">
         <h2>
           Suscripción
         </h2>
@@ -86,28 +82,22 @@
         <div class="img-box">
           <img src="images/welcome.png" alt=""/>
         </div>
-        <div class="detail-box">
+        <div class="detail-box" data-aos="fade-down" data-aos-duration="1000">
           <p>
-            Después de una discusión en equipo, hemos decidido que nuestro dispensador de agua ofrecerá suscripciones que incluirán una cantidad específica de recargas de agua a un precio fijo. Por ejemplo, podrás adquirir una suscripción que te permitirá obtener 100 litros de agua al mes, y tendrás la libertad de rellenar tu garrafón o botella en cualquier momento. Para facilitar este proceso, diseñaremos una aplicación móvil y pagina web que te proporcionará un código de barras único. Al escanearlo en nuestro dispensador, podrás obtener la cantidad de agua que necesites. Adicionalmente, podrás adquirir la suscripción a través de la aplicación o recibir el código de barras en tu boleta o garrafón físico. <br>
-
-            <br>En nuestra página web o aplicación móvil de suscripciones, ofreceremos una sección donde podrás ingresar la cantidad de agua que consumes diariamente. De esta forma, te brindaremos información sobre si estás consumiendo la cantidad adecuada de agua. Además, tendremos un apartado especial para nutriólogos interesados en aparecer en nuestra aplicación. Ellos podrán rentar un espacio en nuestra plataforma para ofrecer recomendaciones sobre un estilo de vida saludable, en adición a tu consumo de agua. Por último, nuestra aplicación móvil te permitirá comprar agua a través de pagos en línea. Una vez que el pago se haya completado, recibirás el código de barras correspondiente a la cantidad de agua que hayas adquirido en nuestros planes de suscripción, también estaremos mostrando la calidad del agua que ofrecemos para que nuestros clientes se sientan seguros y confiados en el agua que consumen. <br>
-
-            <br>La idea de las suscripciones surge con el objetivo de ofrecer una alternativa cómoda y económica para obtener agua potable en grandes cantidades. Al adquirir una suscripción, no tendrás que preocuparte por la compra de botellas de agua, ni por la calidad del agua que estás bebiendo, ya que nuestro dispensador cuenta con filtros de alta calidad que aseguran la pureza del agua. <br>
-
-            <br>Además, en la sección de la página web que te permitirá ingresar la cantidad de agua que consumes diariamente, podrás obtener recomendaciones personalizadas sobre cuánta agua debes beber en base a tu edad, género, peso y nivel de actividad física. Esta información se basará en las recomendaciones de la Organización Mundial de la Salud (OMS) y te ayudará a mantener una hidratación adecuada. <br>
-
-            <br>Por otro lado, en el apartado destinado a nutriólogos, estos profesionales tendrán la oportunidad de promocionarse en nuestra aplicación y ofrecer sus servicios a nuestros usuarios. De esta manera, podrás acceder a información sobre nutrición y salud que te ayudará a llevar un estilo de vida más saludable.<br>
-
-            <br>Nuestro dispensador de agua contará con un programa de fidelidad exclusivo para aquellos clientes que adquieran nuestras suscripciones. Este programa les brindará la oportunidad de obtener descuentos y ofertas especiales en sus próximas compras de agua. De esta manera, queremos recompensar la lealtad de nuestros clientes y ofrecerles un incentivo adicional para seguir consumiendo agua de calidad a través de nuestro dispensador. <br>
-
-            <br>Finalmente, para garantizar la seguridad en el proceso de pago y la entrega de los códigos de barras, nuestra aplicación contará con medidas de seguridad avanzadas para proteger la información personal de los usuarios. Además, nuestro equipo de atención al cliente estará disponible para resolver cualquier duda o problema que puedas tener en el proceso de adquisición de la suscripción. <br>
-
+            Junto a nuestro equipo, hemos decidido que nuestro dispensador de agua ofrecerá suscripciones que incluirán una cantidad específica de recargas de agua a un precio fijo. Por ejemplo, podrás adquirir una suscripción que te permitirá obtener 20 litros de agua al mes, y tendrás la libertad de rellenar tu garrafón o botella en cualquier momento. Para facilitar este proceso, diseñaremos una aplicación móvil y página web que te proporcionará un código de barras único. Al escanearlo en nuestro dispensador, podrás obtener la cantidad de agua que necesites. Adicionalmente, podrás adquirir la suscripción a través de la aplicación o recibir el código de barras en tu boleta o garrafón físico.
+            <br>
+            <br>
+            La idea de las suscripciones surge con el objetivo de ofrecer una alternativa cómoda y económica para obtener agua potable en grandes cantidades.
+            <br>
+            <br>
+            Se ofrecerá igualmente en la página web y/o aplicación una sección donde podrás ingresar la cantidad de agua que consumes diariamente. De esta forma, te brindaremos información sobre si estás consumiendo la cantidad adecuada de agua. Se tendrá un apartado especial para nutriólogos interesados en aparecer en nuestra aplicación. Ellos podrán rentar un espacio en nuestra plataforma para ofrecer recomendaciones sobre un estilo de vida saludable, en adición a tu consumo de agua. 
+            <br>
+            <br>
+            Nuestro dispensador de agua contará con un programa de fidelidad exclusivo para aquellos clientes que adquieran nuestras suscripciones. Este programa les brindará la oportunidad de obtener descuentos y ofertas especiales en sus próximas compras de agua. De esta manera, queremos recompensar la lealtad de nuestros clientes y ofrecerles un incentivo adicional para seguir consumiendo agua de calidad a través de nuestro dispensador. 
+            <br>
+            <br>
+            Finalmente, para garantizar la seguridad en el proceso de pago y la entrega de los códigos de barras, nuestra aplicación contará con medidas de seguridad avanzadas para proteger la información personal de los usuarios. Además, nuestro equipo de atención al cliente estará disponible para resolver cualquier duda o problema que puedas tener en el proceso de adquisición de la suscripción. 
           </p>
-          <div>
-            <a href="">
-              Read More
-            </a>
-          </div>
         </div>
       </div>
 
@@ -122,7 +112,7 @@
     <section class="info_section layout_padding2-bottom">
       <div class="container">
         <h3 class="">
-          BigWing
+          Dispensador JNV
         </h3>
       </div>
       <div class="container info_content">
@@ -132,220 +122,34 @@
             <div class="col-md-6 col-lg-4">
               <div class="d-flex">
                 <h5>
-                  Useful Link
+                  Secciones
                 </h5>
               </div>
               <div class="d-flex ">
                 <ul>
                   <li>
-                    <a href="">
-                      About Us
+                    <a href="index.html">
+                      Inicio
                     </a>
                   </li>
                   <li>
-                    <a href="">
-                      About services
+                    <a href="subscription.html">
+                      Suscripción
                     </a>
                   </li>
                   <li>
-                    <a href="">
-                      About Departments
+                    <a href="dispenser.html">
+                      Dispensador
                     </a>
                   </li>
                   <li>
-                    <a href="">
-                      Services
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Contact Us
-                    </a>
-                  </li>
-                </ul>
-                <ul class="ml-3 ml-md-5">
-                  <li>
-                    <a href="">
-                      Loram ipusm
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Loram ipusm
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Loram ipusm
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Loram ipusm
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Loram ipusm
+                    <a href="results.html">
+                      Encuesta
                     </a>
                   </li>
                 </ul>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="d-flex">
-                <h5>
-                  The Services
-                </h5>
-              </div>
-              <div class="d-flex ">
-                <ul>
-                  <li>
-                    <a href="">
-                      About Us
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      About services
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      About Departments
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Services
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Contact Us
-                    </a>
-                  </li>
-                </ul>
-                <ul class="ml-3 ml-md-5">
-                  <li>
-                    <a href="">
-                      Lorem ipsum dolor
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      sit amet, consectetur
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      adipiscing elit,
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      sed do eiusmod
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      tempor incididunt
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="d-flex">
-                <h5>
-                  Contact Us
-                </h5>
-              </div>
-              <div class="d-flex ">
-                <ul>
-                  <li>
-                    <a href="">
-                      About Us
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      About services
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      About Departments
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Services
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Contact Us
-                    </a>
-                  </li>
-                </ul>
-                <ul class="ml-3 ml-md-5">
-                  <li>
-                    <a href="">
-                      Lorem ipsum
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      dolor sit amet,
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      consectetur
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      adipiscing
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      elit, sed do eiusmod
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="d-flex flex-column flex-lg-row justify-content-between align-items-center align-items-lg-baseline">
-          <div class="social-box">
-            <a href="">
-              <img src="images/fb.png" alt=""/>
-            </a>
-
-            <a href="">
-              <img src="images/twitter.png" alt=""/>
-            </a>
-            <a href="">
-              <img src="images/linkedin1.png" alt=""/>
-            </a>
-            <a href="">
-              <img src="images/instagram1.png" alt=""/>
-            </a>
-          </div>
-          <div class="form_container mt-5">
-            <form action="">
-              <label for="subscribeMail">
-                Newsletter
-              </label>
-              <input type="email" placeholder="Enter Your email" id="subscribeMail"/>
-              <button type="submit">
-                Subscribe
-              </button>
-            </form>
           </div>
         </div>
       </div>
@@ -357,8 +161,9 @@
     <!-- footer section -->
     <section class="container-fluid footer_section">
       <p>
-        © 2019 All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        Hosted with GitHub Pages
+        <br>
+        © 2023 All Rights Reserved
       </p>
     </section>
     <!-- footer section -->
@@ -367,4 +172,8 @@
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body></html>
