se añadió lo siguiente: - Parte de FlexSim - Nuevas imágenes

--- a/dispenser.html
+++ b/dispenser.html
@@ -24,7 +24,9 @@
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet"/>
   <!-- AOS -->
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+
+  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 </head>
 
 <body class="sub_page">
@@ -57,6 +59,9 @@
                       <a class="nav-link" href="dispenser.html">Dispensador </a>
                     </li>
                     <li class="nav-item">
+                      <a class="nav-link" href="development.html">Desarrollo</a>
+                    </li>
+                    <li class="nav-item">
                       <a class="nav-link" href="results.html">Encuesta</a>
                     </li>
                   </ul>
@@ -72,67 +77,42 @@
 
   <!-- service section -->
 
-  <section class="service_section">
-    <div class="container">
-      <div class="custom_heading-container">
-        <h2>
-          Our Services
-        </h2>
-      </div>
-      <div class="service_container layout_padding2">
-        <div class="service_box">
-          <div class="img-box">
-            <img src="images/s-1.jpg" alt=""/>
-          </div>
-          <div class="detail-box">
-            <h4>
-              Business <br/>
-              Consultant
-            </h4>
-            <p>
-              have suffered alteration in some form, by injected humour, or randomised words which don&#39;t look even
-              slightly believable. If you are
-            </p>
-          </div>
-        </div>
-        <div class="service_box">
-          <div class="img-box">
-            <img src="images/s-2.jpg" alt=""/>
-          </div>
-          <div class="detail-box">
-            <h4>
-              Marketing <br/>
-              Analytics
-            </h4>
-            <p>
-              have suffered alteration in some form, by injected humour, or randomised words which don&#39;t look even
-              slightly believable. If you are
-            </p>
-          </div>
-        </div>
-        <div class="service_box">
-          <div class="img-box">
-            <img src="images/s-3.jpg" alt=""/>
-          </div>
-          <div class="detail-box">
-            <h4>
-              Financial <br/>
-              Planning
-            </h4>
-            <p>
-              have suffered alteration in some form, by injected humour, or randomised words which don&#39;t look even
-              slightly believable. If you are
-            </p>
-          </div>
-        </div>
-      </div>
-      <div>
-        <a href="">
-          Read More
-        </a>
-      </div>
-    </div>
-  </section>
+<br>
+<div class="container">
+  <div class="custom_heading-container">
+    <h2 data-aos="fade-right" data-aos-duration="3000">
+      Nuestro Dispensador
+    </h2>
+  </div>
+  <div class="container">
+    <br>
+    <p>El diseño fue creado durante estos meses por nuestro integrante Hugo Roldán, estudiante de Ingeniería Industrial y de Sistemas.
+    </p>
+    <br>
+    <br>
+  </div>
+  <div class="img-box" data-aos="fade-up" data-aos-duration="1000">
+    <img src="images/dispensador1.jpeg" alt=""/>
+  </div>
+  <br>
+  <br>
+  <br>
+  <div class="img-box" data-aos="fade-up" data-aos-duration="1000">
+    <img src="images/dispensador2.jpeg" alt=""/>
+  </div>
+  <br>
+  <br>
+  <br>
+  <div class="img-box" data-aos="fade-up" data-aos-duration="1000">
+    <img src="images/dispensador3.jpeg" alt=""/>
+  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+</div>
 
   <!-- end service section -->
 
