--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   <link href="css/responsive.css" rel="stylesheet"/>
   <!-- AOS -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -55,6 +57,9 @@
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="dispenser.html">Dispensador </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="development.html">Desarrollo</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="results.html">Encuesta</a>
@@ -94,7 +99,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="slider_img-box" data-aos="fade-up">
-                    <img src="images/slider-img.png" alt="" data-aos="fade-up" data-aos-duration="3000"/>
+                    <img src="images/home.png" alt="" data-aos="fade-up" data-aos-duration="3000"/>
                     
                   </div>
                 </div>
@@ -117,7 +122,7 @@
       </div>
       <div class="layout_padding2">
         <div class="img-box">
-          <img src="images/welcome.png" alt=""/>
+          <img src="images/problem_section.png" alt=""/>
         </div>
         <div class="detail-box" data-aos="fade-right" data-aos-duration="1000">
           <p>
@@ -143,7 +148,7 @@
   <!-- service section -->
 
   <section class="service_section">
-    <div class="container" data-aos="zoom-in-up" data-aos-duration="1000">
+    <div class="container" data-aos="zoom-in" data-aos-duration="1000">
       <div class="custom_heading-container">
         <h2>
           Nuestros objetivos
@@ -193,8 +198,8 @@
         </h2>
       </div>
       <div class="layout_padding2">
-        <div class="img-box">
-          <img src="images/problem.jpg" alt=""/>
+        <div class="img-box" data-aos="zoom-in">
+          <img src="images/team.png" alt=""/>
         </div>
         <div class="detail-box" data-aos="fade-up" data-aos-duration="1000">
           <p>
