--- a/development.html
+++ b/development.html
@@ -9,7 +9,7 @@
   <meta name="description" content=""/>
   <meta name="author" content=""/>
 
-  <title>Suscripción</title>
+  <title>Desarrollo</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css"/>
@@ -80,30 +80,21 @@
     <div class="container">
       <div class="custom_heading-container" data-aos="fade-right" data-aos-duration="3000">
         <h2>
-          Suscripción
+          Desarrollo
         </h2>
       </div>
-      <div class="layout_padding2">
-        <div class="img-box">
-          <img src="images/subs.png" alt="" data-aos="zoom-in" data-aos-duration="1000"/>
-        </div>
-        <div class="detail-box" data-aos="fade-down" data-aos-duration="1000">
-          <p>
-            Junto a nuestro equipo, hemos decidido que nuestro dispensador de agua ofrecerá suscripciones que incluirán una cantidad específica de recargas de agua a un precio fijo. Por ejemplo, podrás adquirir una suscripción que te permitirá obtener 20 litros de agua al mes, y tendrás la libertad de rellenar tu garrafón o botella en cualquier momento. Para facilitar este proceso, diseñaremos una aplicación móvil y página web que te proporcionará un código de barras único. Al escanearlo en nuestro dispensador, podrás obtener la cantidad de agua que necesites. Adicionalmente, podrás adquirir la suscripción a través de la aplicación o recibir el código de barras en tu boleta o garrafón físico.
-            <br>
-            <br>
-            La idea de las suscripciones surge con el objetivo de ofrecer una alternativa cómoda y económica para obtener agua potable en grandes cantidades.
-            <br>
-            <br>
-            Se ofrecerá igualmente en la página web y/o aplicación una sección donde podrás ingresar la cantidad de agua que consumes diariamente. De esta forma, te brindaremos información sobre si estás consumiendo la cantidad adecuada de agua. Se tendrá un apartado especial para nutriólogos interesados en aparecer en nuestra aplicación. Ellos podrán rentar un espacio en nuestra plataforma para ofrecer recomendaciones sobre un estilo de vida saludable, en adición a tu consumo de agua. 
-            <br>
-            <br>
-            Nuestro dispensador de agua contará con un programa de fidelidad exclusivo para aquellos clientes que adquieran nuestras suscripciones. Este programa les brindará la oportunidad de obtener descuentos y ofertas especiales en sus próximas compras de agua. De esta manera, queremos recompensar la lealtad de nuestros clientes y ofrecerles un incentivo adicional para seguir consumiendo agua de calidad a través de nuestro dispensador. 
-            <br>
-            <br>
-            Finalmente, para garantizar la seguridad en el proceso de pago y la entrega de los códigos de barras, nuestra aplicación contará con medidas de seguridad avanzadas para proteger la información personal de los usuarios. Además, nuestro equipo de atención al cliente estará disponible para resolver cualquier duda o problema que puedas tener en el proceso de adquisición de la suscripción. 
-          </p>
-        </div>
+      <div class="layout_padding2" data-aos="fade-down" data-aos-duration="1000">
+        <p>Se han creado ciertas simulaciones en FlexSim sobre el uso de nuestro dispensador.</p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/6YZP8ZctLnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <br>
+        <br>
+        <br>
+        <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Tl1QRyS--CY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
 
     </div>
