--- a/results.html
+++ b/results.html
@@ -27,7 +27,9 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <!-- AOS -->
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+
+  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 </head>
 
 <body class="sub_page">
@@ -58,6 +60,9 @@
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="dispenser.html">Dispensador </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="development.html">Desarrollo</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="results.html">Encuesta</a>
