Cambios a formato de videos y modificación del navbar Se hicieron los cambios al navbar para agregar lo que faltaba de enlaces.

--- a/dispenser.html
+++ b/dispenser.html
@@ -59,7 +59,7 @@
                       <a class="nav-link" href="dispenser.html">Dispensador </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="development.html">Desarrollo</a>
+                      <a class="nav-link" href="simulation.html">Simulación</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="results.html">Encuesta</a>
@@ -86,6 +86,14 @@
   </div>
   <div class="container">
     <br>
+    <p>El dispensador del equipo JNV ofrece un servicio de calidad brindando la oportunidad de llenar desde una botella de 1 litro hasta un garrafón de 20 litros. Si su botella cuenta con nuestro código QR o usted tiene su dispositivo con la cuenta en nuestro sistema se le brindará un descuento al precio, los precios rondan en:
+    <ul>
+      <li>Botella de medio litro - 1.50 pesos mexicanos</li>
+      <li>Botella de 1 litro - 3 pesos mexicanos</li>
+      <li>Medio garrafón - 6 pesos mexicanos</li>
+      <li>Garrafón completo (20 litros) - 10 pesos mexicanos</li>
+    </ul>
+    </p>
     <p>El diseño fue creado durante estos meses por nuestro integrante Hugo Roldán, estudiante de Ingeniería Industrial y de Sistemas.
     </p>
     <br>
@@ -149,6 +157,11 @@
                   <li>
                     <a href="dispenser.html">
                       Dispensador
+                    </a>
+                  </li>
+                  <li>
+                    <a href="simulation.html">
+                      Simulación
                     </a>
                   </li>
                   <li>
