--- a/results.html
+++ b/results.html
@@ -62,7 +62,7 @@
                       <a class="nav-link" href="dispenser.html">Dispensador </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="development.html">Desarrollo</a>
+                      <a class="nav-link" href="simulation.html">Simulación</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="results.html">Encuesta</a>
@@ -257,6 +257,11 @@
                   <li>
                     <a href="dispenser.html">
                       Dispensador
+                    </a>
+                  </li>
+                  <li>
+                    <a href="simulation.html">
+                      Simulación
                     </a>
                   </li>
                   <li>
