--- a/simulation.html
+++ b/simulation.html
@@ -9,7 +9,7 @@
   <meta name="description" content=""/>
   <meta name="author" content=""/>
 
-  <title>Desarrollo</title>
+  <title>Simulación</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css"/>
@@ -59,7 +59,7 @@
                       <a class="nav-link" href="dispenser.html">Dispensador </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="development.html">Desarrollo</a>
+                      <a class="nav-link" href="simulation.html">Simulación</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="results.html">Encuesta</a>
@@ -80,22 +80,32 @@
     <div class="container">
       <div class="custom_heading-container" data-aos="fade-right" data-aos-duration="3000">
         <h2>
-          Desarrollo
+          Simulación
         </h2>
       </div>
-      <div class="layout_padding2" data-aos="fade-down" data-aos-duration="1000">
-        <p>Se han creado ciertas simulaciones en FlexSim sobre el uso de nuestro dispensador.</p>
-        <br>
-        <br>
-        <br>
-        <br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/6YZP8ZctLnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <br>
-        <br>
-        <br>
-        <br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Tl1QRyS--CY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <br>
+      <p>Se ha desarrollado una simulación utilizando FlexSim sobre el uso de nuestro dispensador.</p>
+      <br>
+      <div class="row">
+        <div class="col-md-3 col-sm-6">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/6YZP8ZctLnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <div class="col-md-3 col-sm-6">
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Tl1QRyS--CY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
       </div>
+      <br>
+      <br>
+      <p>En esta representación se muestra una comparativa de un antes y un después de la implementación de nuestro proyecto en el cual se ven amplias mejorías en el rendimiento tales como:
+        <ul>
+          <li>Mayor número de botellas llenas</li>
+          <li>Menor tiempo en el intervalo del camino a llenado</li>
+        </ul>
+      </p>
+      <br>
+      <br>
 
     </div>
   </section>
@@ -136,6 +146,11 @@
                   <li>
                     <a href="dispenser.html">
                       Dispensador
+                    </a>
+                  </li>
+                  <li>
+                    <a href="simulation.html">
+                      Simulación
                     </a>
                   </li>
                   <li>
