--- a/subscription.html
+++ b/subscription.html
@@ -59,7 +59,7 @@
                       <a class="nav-link" href="dispenser.html">Dispensador </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="development.html">Desarrollo</a>
+                      <a class="nav-link" href="simulation.tml">Simulación</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="results.html">Encuesta</a>
@@ -145,6 +145,11 @@
                   <li>
                     <a href="dispenser.html">
                       Dispensador
+                    </a>
+                  </li>
+                  <li>
+                    <a href="simulation.html">
+                      Simulación
                     </a>
                   </li>
                   <li>
