Animación añadí animación a los videos

--- a/simulation.html
+++ b/simulation.html
@@ -86,7 +86,7 @@
       <br>
       <p>Se ha desarrollado una simulación utilizando FlexSim sobre el uso de nuestro dispensador.</p>
       <br>
-      <div class="row">
+      <div class="row" data-aos="zoom-in" data-aos-duration="1000">
         <div class="col-md-3 col-sm-6">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/6YZP8ZctLnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
